fixed issue with background image on safari

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     color: black;
     margin:0;
     font-family: Helvetica;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url('./sirens.png');
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url('./sirens.jpg');
     background-size: cover;
     padding-bottom: 0;
 }
@@ -143,20 +143,39 @@ body {
    font-size: 1.5em;
    text-align: center;
  }
- @media only screen and (min-width: 320px) and (max-width: 520px){
+ @media only screen and (max-width: 520px){
   body {
     display: flex;
     flex-direction: column;
   } 
   .header {
     padding-bottom: 25px;
+    font-size: 1.3em;
   }
   main {
      display: flex;
+     margin: auto;
    }
    .right, .wrong {
      border: none;
    }
+   .question-form .question {
+    margin-bottom: 20px;
+    padding: 0 1%;
+    font-size: 18px;
+    font-weight: 600px;
+  }
+  form {
+    width:80%;
+    padding: 10px;
+    margin:auto auto 45px auto;
+    background: white;
+    min-height: 300px;
+    border-radius: 4px;
+    border: 5px inset;
+    
+  }
+  
 
  }
   
